[Refactor] - Refactoring tests and some little things